[project]
name = "mcp-server-r-counter"
version = "0.0.1"
description = "A MCP Server Counting Number of r's for a Given Query"
dependencies = [
    "mcp>=1.4.1",
]

[project.scripts]
mcp-server-calculator = "mcp_server_r_counter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"